Added corrupted queue detection code
When a corruption of the queue is detected, the process thread breaks
instead of going into endless loop. It also flags the condition through PVs.

While at it, improved stall event visibility and alarming.

--- a/ned/nedApp/Db/Occ.template
+++ b/ned/nedApp/Db/Occ.template
@@ -7,9 +7,16 @@ record(mbbi, "$(P)Status")
     field(ZRVL, "0")
     field(ONVL, "1")
     field(TWVL, "2")
+    field(THVL, "3")
     field(ZRST, "OK")
     field(ONST, "RX buffer full")
     field(TWST, "OCC error")
+    field(THST, "Corrupted data")
+    field(UNSV, "MINOR")
+    field(ZRSV, "NO ALARM")
+    field(ONSV, "MAJOR")
+    field(TWSV, "MAJOR")
+    field(THSV, "MAJOR")
     field(SCAN, "I/O Intr")
 }
 record(mbbo, "$(P)Command")
@@ -103,9 +110,14 @@ record(mbbi, "$(P)RxStalled")
     field(TWVL, "2")
     field(THVL, "3")
     field(ZRST, "Not stalled")
-    field(ONST, "OCC stalled")
-    field(TWST, "Copy thread stalled")
-    field(THST, "OCC and copy stalled")
+    field(ONST, "DMA stalled")
+    field(TWST, "Copy stalled")
+    field(THST, "DMA and copy stalled")
+    field(UNSV, "MINOR")
+    field(ZRSV, "NO ALARM")
+    field(ONSV, "MAJOR")
+    field(TWSV, "MAJOR")
+    field(THSV, "MAJOR")
     field(SCAN, "1 second")
     field(VAL,  "0")
 }
