--- a/ned/nedApp/Db/Occ.template
+++ b/ned/nedApp/Db/Occ.template
@@ -145,6 +145,9 @@ record(ai, "$(P)FpgaTemp")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))FpgaTemp")
     field(EGU,  "Celsius")
+    field(PREC, "2")
+    field(HIHI, "62")
+    field(HHSV, "MAJOR")
     field(SCAN, "I/O Intr")
 }
 record(ai, "$(P)FpgaCoreVolt")
@@ -153,6 +156,11 @@ record(ai, "$(P)FpgaCoreVolt")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))FpgaCoreVolt")
     field(EGU,  "Volt")
+    field(PREC, "3")
+    field(LOLO, "0.97")
+    field(HIHI, "1.03")
+    field(LLSV, "MAJOR")
+    field(HHSV, "MAJOR")
     field(SCAN, "I/O Intr")
 }
 record(ai, "$(P)FpgaAuxVolt")
@@ -161,6 +169,11 @@ record(ai, "$(P)FpgaAuxVolt")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))FpgaAuxVolt")
     field(EGU,  "Volt")
+    field(PREC, "3")
+    field(LOLO, "1.71")
+    field(HIHI, "1.89")
+    field(LLSV, "MAJOR")
+    field(HHSV, "MAJOR")
     field(SCAN, "I/O Intr")
 }
 record(ai, "$(P)SfpTemp")
@@ -169,6 +182,9 @@ record(ai, "$(P)SfpTemp")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))SfpTemp")
     field(EGU,  "Celsius")
+    field(PREC, "2")
+    field(HIHI, "50")
+    field(HHSV, "MAJOR")
     field(SCAN, "10 second")
 }
 record(ai, "$(P)SfpRxPower")
@@ -177,6 +193,9 @@ record(ai, "$(P)SfpRxPower")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))SfpRxPower")
     field(EGU,  "uW")
+    field(PREC, "0")
+    field(LOLO, "100")
+    field(LLSV, "MAJOR")
     field(SCAN, "10 second")
 }
 record(ai, "$(P)SfpTxPower")
@@ -185,6 +204,8 @@ record(ai, "$(P)SfpTxPower")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))SfpTxPower")
     field(EGU,  "uW")
+    field(LOLO, "400")
+    field(LLSV, "MAJOR")
     field(SCAN, "10 second")
 }
 record(ai, "$(P)SfpVccPower")
@@ -193,6 +214,11 @@ record(ai, "$(P)SfpVccPower")
     field(DTYP, "asynFloat64")
     field(INP,  "@asyn($(PORT))SfpVccPower")
     field(EGU,  "Volt")
+    field(PREC, "3")
+    field(LOLO, "3.1")
+    field(HIHI, "3.4")
+    field(LLSV, "MAJOR")
+    field(HHSV, "MAJOR")
     field(SCAN, "10 second")
 }
 record(ai, "$(P)SfpTxBiasCur")
