--- a/ned/nedApp/Db/BaseModulePlugin.template
+++ b/ned/nedApp/Db/BaseModulePlugin.template
@@ -35,6 +35,7 @@ record(mbbi, "$(P)Status")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT))Status")
+    field(FLNK, "$(P)StatChange")
     field(ZRVL, "0")
     field(ZRST, "Not initialized")
     field(ONVL, "1")
@@ -52,6 +53,11 @@ record(mbbi, "$(P)Status")
     field(SVVL, "8")
     field(SVST, "Ready")
     field(SCAN, "I/O Intr")
+}
+record(fanout, "$(P)StatChange")
+{
+    field(DESC, "Status change fanout")
+    field(LNK1, "$(P)VerProc")
 }
 record(mbbo, "$(P)Command")
 {
@@ -116,4 +122,91 @@ record(longin, "$(P)FirmwareVer")
     field(INP,  "@asyn($(PORT))FirmwareVer")
     field(VAL,  "0")
     field(SCAN, "Passive")
+}
+record(fanout, "$(P)VerFanout")
+{
+    field(DESC, "Version records fanout")
+    field(LNK1, "$(P)HardwareVer")
+    field(LNK2, "$(P)HardwareRev")
+    field(LNK3, "$(P)HardwareDate")
+    field(LNK4, "$(P)FirmwareVer")
+    field(LNK5, "$(P)FirmwareRev")
+    field(LNK6, "$(P)FirmwareDate")
+}
+record(calcout, "$(P)VerProc")
+{
+    field(DESC, "Detect version query")
+    field(INPA, "$(P)Command NPP")
+    field(INPB, "$(P)Status NPP")
+    field(CALC, "(A=2)&&(B==7)")
+    field(OUT,  "$(P)VerFanout.PROC")
+    field(OOPT, "When Non-zero")
+    field(OEVT, "1")
+}
+record(bi, "$(P)Supported")
+{
+    field(DESC, "Is module supported")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT))Supported")
+    field(SCAN, "Passive")
+    field(PINI, "YES")
+    field(ZNAM, "Not supported")
+    field(ONAM, "Supported")
+}
+record(mbbi, "$(P)Verified")
+{
+    field(DESC, "Conn,version,type verified")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT))Verified")
+    field(SCAN, "I/O Intr")
+    field(PINI, "YES")
+    field(ZRVL, "0")
+    field(ZRST, "Not verified")
+    field(ZRSV, "MINOR")
+    field(ONVL, "1")
+    field(ONST, "Type OK")
+    field(TWVL, "2")
+    field(TWST, "Type mismatch")
+    field(TWSV, "MAJOR")
+    field(THVL, "3")
+    field(THST, "Version OK")
+    field(FRVL, "4")
+    field(FRST, "Version mismatch")
+    field(FRSV, "MAJOR")
+    field(EIVL, "5")
+    field(EIST, "Type & version OK")
+}
+record(mbbi, "$(P)Type")
+{
+    field(DESC, "Module type")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT))Type")
+    field(SCAN, "Passive")
+    field(PINI, "YES")
+    field(ZRVL, "32")
+    field(ONVL, "33")
+    field(TWVL, "34")
+    field(FRVL, "37")
+    field(FVVL, "41")
+    field(SXVL, "42")
+    field(SVVL, "43")
+    field(EIVL, "48")
+    field(NIVL, "64")
+    field(TEVL, "160")
+    field(ELVL, "161")
+    field(TVVL, "162")
+    field(TTVL, "170")
+    field(ZRST, "ROC")
+    field(ONST, "AROC")
+    field(TWST, "HROC")
+    field(FRST, "BLNROC")
+    field(FVST, "CROC")
+    field(SXST, "IROC")
+    field(SVST, "BIDIMROC")
+    field(EIST, "DSP")
+    field(NIST, "SANSROC")
+    field(TEST, "ACPC")
+    field(ELST, "ACPCFEM")
+    field(TVST, "FFC")
+    field(TTST, "FEM")
 }
