Dropped plugin state machine and allow arbitrary command to be run anytime
Instead provide a LastCmdRsp record which tells the status of last command and
can other records can wait upon.

--- a/ned/nedApp/Db/BaseModulePlugin.template
+++ b/ned/nedApp/Db/BaseModulePlugin.template
@@ -29,30 +29,25 @@ record(stringin, "$(P)HardwareId")
     field(SCAN, "Passive")
     field(PINI, "YES")
 }
-record(mbbi, "$(P)Status")
+record(mbbi, "$(P)LastCmdRsp")
 {
-    field(DESC, "Status of RocPlugin")
+    field(DESC, "Last command response status")
     field(PINI, "YES")
     field(DTYP, "asynInt32")
-    field(INP,  "@asyn($(PORT))Status")
+    field(INP,  "@asyn($(PORT))LastCmdRsp")
+    field(SCAN, "I/O Intr")
+    field(PINI, "YES")
     field(FLNK, "$(P)StatChange")
     field(ZRVL, "0")
-    field(ZRST, "Not initialized")
+    field(ZRST, "None issued")
     field(ONVL, "1")
-    field(ONST, "Error")
-    field(TWVL, "3")
-    field(TWST, "Timeout")
-    field(THVL, "4")
-    field(THST, "Type wait")
-    field(FRVL, "5")
-    field(FRST, "Type OK")
-    field(FVVL, "6")
-    field(FVST, "Version wait")
-    field(SXVL, "7")
-    field(SXST, "Waiting")
-    field(SVVL, "8")
-    field(SVST, "Ready")
-    field(SCAN, "I/O Intr")
+    field(ONST, "Success")
+    field(TWVL, "2")
+    field(TWST, "Waiting")
+    field(THVL, "3")
+    field(THST, "Timeout")
+    field(FRVL, "4")
+    field(FRST, "Error")
 }
 record(fanout, "$(P)StatChange")
 {
@@ -137,8 +132,8 @@ record(calcout, "$(P)VerProc")
 {
     field(DESC, "Detect version query")
     field(INPA, "$(P)Command NPP")
-    field(INPB, "$(P)Status NPP")
-    field(CALC, "(A=2)&&(B==7)")
+    field(INPB, "$(P)LastCmdRsp NPP")
+    field(CALC, "(A=2)&&(B=1)")
     field(OUT,  "$(P)VerFanout.PROC")
     field(OOPT, "When Non-zero")
     field(OEVT, "1")
