Minor changes in the database to work better with screens

--- a/ned/nedApp/Db/AdaraPlugin.template
+++ b/ned/nedApp/Db/AdaraPlugin.template
@@ -4,11 +4,9 @@ record(longin, "$(P)BadPulseDrops")
    field(DTYP,  "asynInt32")
    field(INP,   "@asyn($(PORT))BadPulseDrops")
    field(SCAN,  "I/O Intr")
-   field(VAL,   "0")
+   field(PINI,  "YES")
    field(HIGH,  "1")
-   field(LOW,   "0")
    field(HSV,   "MAJOR")
-   field(LSV,   "NO_ALARM")
 }
 record(longin, "$(P)BadDspDrops")
 {
@@ -16,9 +14,7 @@ record(longin, "$(P)BadDspDrops")
    field(DTYP,  "asynInt32")
    field(INP,   "@asyn($(PORT))BadDspDrops")
    field(SCAN,  "I/O Intr")
-   field(VAL,   "0")
+   field(PINI,  "YES")
    field(HIGH,  "1")
-   field(LOW,   "0")
    field(HSV,   "MAJOR")
-   field(LSV,   "NO_ALARM")
 }
