--- a/ned/nedApp/Db/RtdlPlugin.template
+++ b/ned/nedApp/Db/RtdlPlugin.template
@@ -53,12 +53,36 @@ record(longin, "$(P)Tstat")
     field(INP,  "@asyn($(PORT))Tstat")
     field(SCAN, "I/O Intr")
 }
-record(longin, "$(P)Veto")
+record(mbbi, "$(P)Veto")
 {
     field(DESC, "Last cycle veto")
     field(DTYP, "asynInt32")
     field(INP,  "@asyn($(PORT))Veto")
     field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "No beam")
+    field(ONVL, "1")
+    field(ONST, "Not target 1")
+    field(TWVL, "2")
+    field(TWST, "Not target 2")
+    field(THVL, "3")
+    field(THST, "Diagnostic pulse")
+    field(FRVL, "4")
+    field(FRST, "Physics pulse 1")
+    field(FVVL, "5")
+    field(FVST, "Physics pulse 2")
+    field(SXVL, "6")
+    field(SXST, "MPS auto reset")
+    field(SVVL, "7")
+    field(SVST, "MPS fault")
+    field(EIVL, "8")
+    field(EIST, "Event link error")
+    field(NIVL, "9")
+    field(NIST, "Ring RF synch")
+    field(TEVL, "10")
+    field(TEST, "Ring RF freq")
+    field(ELVL, "11")
+    field(ELST, "60 Hz tolerance")
 }
 record(longin, "$(P)Cycle")
 {
