--- a/ned/nedApp/Db/BaseSocketPlugin.template
+++ b/ned/nedApp/Db/BaseSocketPlugin.template
@@ -2,33 +2,32 @@ record(stringout, "$(P)ListenIp")
 {
     field(DTYP, "asynOctetWrite")
     field(OUT,  "@asyn($(PORT))ListenIp")
-    field(VAL,  "Unknown")
 }
 record(longout, "$(P)ListenPort")
 {
-   field(DTYP,  "asynInt32")
-   field(OUT,   "@asyn($(PORT))ListenPort")
-   field(VAL,   "0")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT))ListenPort")
+    field(VAL,  "0")
 }
 record(stringin, "$(P)ClientIp")
 {
     field(DTYP, "asynOctetRead")
     field(INP,  "@asyn($(PORT))ClientIp")
-    field(VAL,  "None")
-   field(SCAN,  "I/O Intr")
+    field(SCAN, "I/O Intr")
+    field(PINI, "YES")
 }
 record(longin, "$(P)TxCount")
 {
-   field(DTYP,  "asynInt32")
-   field(INP,   "@asyn($(PORT))TxCount")
-   field(VAL,   "0")
-   field(SCAN,  "I/O Intr")
+    field(DTYP, "asynInt32")
+    field(INP,  "@asyn($(PORT))TxCount")
+    field(VAL,  "0")
+    field(SCAN, "I/O Intr")
 }
 record(longout, "$(P)CheckClientDel")
 {
-   field(DESC,  "Check client interval")
-   field(EGU,   "seconds")
-   field(DTYP,  "asynInt32")
-   field(OUT,   "@asyn($(PORT))CheckClientDel")
-   field(VAL,   "5")
+    field(DESC, "Check client interval")
+    field(EGU,  "seconds")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT))CheckClientDel")
+    field(VAL,  "2")
 }
