Detector configuration migration from dcomserver
Added read-back PVs which can be used to download configuration registers
from detectors and save them through autosave. Restart nED with normal
PVs and they will be populated by autosave since PV names are the same.

--- a/ned/nedApp/Db/DumpPlugin.template
+++ b/ned/nedApp/Db/DumpPlugin.template
@@ -1,7 +1,5 @@
-record(waveform, "$(P)FilePath")
+record(stringout, "$(P)FilePath")
 {
    field(DTYP,  "asynOctetWrite")
-   field(INP,   "@asyn($(PORT))FilePath")
-   field(FTVL,  "CHAR")
-   field(NELM,  "1024")
+   field(OUT,   "@asyn($(PORT))FilePath")
 }
