--- a/ned/nedApp/Db/RB_FemPlugin.template
+++ b/ned/nedApp/Db/RB_FemPlugin.template
@@ -1811,24 +1811,24 @@ record(mbbi, "$(P)LvdsDin15")
     field(THVL, "3")
     field(THST, "low and high")
 }
-record(bo, "$(P)LvdsMonitor")
+record(bi, "$(P)LvdsMonitor")
 {
     info(autosaveFields, "VAL")
     field(DESC, "LVDS debug monitor")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))LvdsMonitor")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))LvdsMonitor")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "disable")
     field(ONAM, "enable")
 }
-record(mbbo, "$(P)TxenCtrl")
+record(mbbi, "$(P)TxenCtrl")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TXEN control")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TxenCtrl")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TxenCtrl")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "TXEN")
@@ -1839,13 +1839,13 @@ record(mbbo, "$(P)TxenCtrl")
     field(THVL, "3")
     field(THST, "always 1")
 }
-record(mbbo, "$(P)TsyncCtrl")
+record(mbbi, "$(P)TsyncCtrl")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TSYNC control")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TsyncCtrl")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TsyncCtrl")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "from polariry")
@@ -1856,13 +1856,13 @@ record(mbbo, "$(P)TsyncCtrl")
     field(THVL, "3")
     field(THST, "always 1")
 }
-record(mbbo, "$(P)TclkCtrl")
+record(mbbi, "$(P)TclkCtrl")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TCLK control")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TclkCtrl")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TclkCtrl")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "TCLK")
@@ -1873,13 +1873,13 @@ record(mbbo, "$(P)TclkCtrl")
     field(THVL, "3")
     field(THST, "always 1")
 }
-record(mbbo, "$(P)ResetCtrl")
+record(mbbi, "$(P)ResetCtrl")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Reset control")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))ResetCtrl")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))ResetCtrl")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZRVL, "0")
     field(ZRST, "not used")
@@ -1890,178 +1890,178 @@ record(mbbo, "$(P)ResetCtrl")
     field(THVL, "3")
     field(THST, "from optic")
 }
-record(bo, "$(P)VerboseDisc")
+record(bi, "$(P)VerboseDisc")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Verbose discover")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))VerboseDisc")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))VerboseDisc")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "disable")
     field(ONAM, "enable")
 }
-record(bo, "$(P)VerboseRsp")
+record(bi, "$(P)VerboseRsp")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Verbose command response")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))VerboseRsp")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))VerboseRsp")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "disable")
     field(ONAM, "enable")
 }
-record(bo, "$(P)Ch10Disable")
+record(bi, "$(P)Ch10Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan10 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch10Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch10Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch9Disable")
+record(bi, "$(P)Ch9Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan9 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch9Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch9Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch8Disable")
+record(bi, "$(P)Ch8Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan8 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch8Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch8Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch7Disable")
+record(bi, "$(P)Ch7Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan7 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch7Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch7Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch6Disable")
+record(bi, "$(P)Ch6Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan6 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch6Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch6Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch5Disable")
+record(bi, "$(P)Ch5Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan5 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch5Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch5Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch4Disable")
+record(bi, "$(P)Ch4Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan4 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch4Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch4Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch3Disable")
+record(bi, "$(P)Ch3Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan3 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch3Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch3Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch2Disable")
+record(bi, "$(P)Ch2Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan2 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch2Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch2Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)Ch1Disable")
+record(bi, "$(P)Ch1Disable")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Chan1 disable")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))Ch1Disable")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))Ch1Disable")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "enable")
     field(ONAM, "disable")
 }
-record(bo, "$(P)TxenMode")
+record(bi, "$(P)TxenMode")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TXEN mode")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TxenMode")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TxenMode")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "external")
     field(ONAM, "internal")
 }
-record(bo, "$(P)TsyncMode")
+record(bi, "$(P)TsyncMode")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TSYNC mode")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TsyncMode")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TsyncMode")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "external")
     field(ONAM, "internal")
 }
-record(bo, "$(P)TclkMode")
+record(bi, "$(P)TclkMode")
 {
     info(autosaveFields, "VAL")
     field(DESC, "TCLK mode")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))TclkMode")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))TclkMode")
+    field(SCAN, "I/O Intr")
     field(VAL,  "0")
     field(ZNAM, "external")
     field(ONAM, "internal")
 }
-record(bo, "$(P)ResetMode")
+record(bi, "$(P)ResetMode")
 {
     info(autosaveFields, "VAL")
     field(DESC, "Reset mode")
     field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT))ResetMode")
-    field(PINI, "YES")
+    field(INP,  "@asyn($(PORT))ResetMode")
+    field(SCAN, "I/O Intr")
     field(VAL,  "1")
     field(ZNAM, "internal")
     field(ONAM, "external")
