--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -16,12 +16,18 @@ DB += BaseSocketPlugin.template
 DB += BaseModulePlugin.template
 DB += DiscoverPlugin.template
 DB += DspPlugin.template
+DB += FemPlugin.template
 DB += RocPlugin_v51.template
 DB += RocPlugin_v52.template
+DB += RocPlugin_v54.template
+DB += RB_DspPlugin.template
+DB += RB_FemPlugin.template
+DB += RB_RocPlugin_v51.template
+DB += RB_RocPlugin_v52.template
+DB += RB_RocPlugin_v54.template
 DB += RocHv.template
 DB += ROCHV.db
-DB += ROCHVSum.db
-DB += FemPlugin.template
+DB += ROCHVSumBL16b.db
 DB += DumpPlugin.template
 DB += StatPlugin.template
 DB += RtdlPlugin.template
