Generic module communication testing module

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -33,6 +33,7 @@ DB += StatPlugin.template
 DB += RtdlPlugin.template
 DB += AdaraPlugin.template
 DB += CmdPlugin.template
+DB += GenericModulePlugin.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
