Bare support for ACPC FEM
It discovers, verifies version, read status. For some reason ACPC FEM doesn't respond to READ_CONFIG.
Config parameters were ported from dcomserver but haven't been verified.

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -17,6 +17,7 @@ DB += BaseModulePlugin.template
 DB += DiscoverPlugin.template
 DB += DspPlugin.template
 DB += FemPlugin.template
+DB += AcpcFemPlugin.template
 DB += RocPlugin_v51.template
 DB += RocPlugin_v52.template
 DB += RocPlugin_v54.template
