--- a/ned/nedApp/src/Makefile
+++ b/ned/nedApp/src/Makefile
@@ -68,6 +68,7 @@ $(PROD_NAME)_SRCS  += RocPlugin_v51.cpp
 $(PROD_NAME)_SRCS  += RocPlugin_v52.cpp
 $(PROD_NAME)_SRCS  += RocPlugin_v54.cpp
 $(PROD_NAME)_SRCS  += FemPlugin.cpp
+$(PROD_NAME)_SRCS  += AcpcFemPlugin.cpp
 $(PROD_NAME)_SRCS  += DiscoverPlugin.cpp
 $(PROD_NAME)_SRCS  += DumpPlugin.cpp
 $(PROD_NAME)_SRCS  += StatPlugin.cpp
@@ -80,10 +81,12 @@ $(PROD_NAME)_DOXS  += RocPlugin_v51.dox
 $(PROD_NAME)_DOXS  += RocPlugin_v52.dox
 $(PROD_NAME)_DOXS  += RocPlugin_v54.dox
 $(PROD_NAME)_DOXS  += FemPlugin.dox
+$(PROD_NAME)_DOCS  += AcpcFemPlugin.dox
 
 $(PROD_NAME)_TMPL  += DspPlugin.template
 $(PROD_NAME)_TMPL  += RocPlugin.template
 $(PROD_NAME)_TMPL  += FemPlugin.template
+$(PROD_NAME)_TMPL  += AcpcFemPlugin.template
 $(PROD_NAME)_TMPL  += RocPlugin_v51.template
 $(PROD_NAME)_TMPL  += RocPlugin_v52.template
 $(PROD_NAME)_TMPL  += RocPlugin_v54.template
