ROCHVMain.template: Read of VConv params also reads ReadADC for 	benefit of GUI

--- a/ned/nedApp/Db/ROCHVMain.template
+++ b/ned/nedApp/Db/ROCHVMain.template
@@ -452,5 +452,6 @@ record(ai, "$(P):VConvY") {
 record(ai, "$(P):VConvZ") {
    field(HOPR, "65535")
    field(LOPR, "0")
+   field(FLNK, "$(P):ReadADC") 
 }
 
