Clear previous fields when new command is issued.
Making CSS screens more trustworthy.

--- a/ned/nedApp/Db/GenericModulePlugin.template
+++ b/ned/nedApp/Db/GenericModulePlugin.template
@@ -80,7 +80,7 @@ record(mbbi, "$(P)RspCmd")
     field(INP,  "@asyn($(PORT))RspCmd")
     field(SCAN, "I/O Intr")
     field(ZRVL, "0")
-    field(ZRST, "Reset")
+    field(ZRST, "")
     field(ONVL, "128")
     field(ONST, "Discover")
     field(TWVL, "32")
@@ -95,6 +95,12 @@ record(mbbi, "$(P)RspCmd")
     field(SXST, "Start acquisition")
     field(SVVL, "131")
     field(SVST, "Stop acquisition")
+    field(EIVL, "66")
+    field(EIST, "Bad packet")
+    field(EIVL, "80")
+    field(EIST, "HV send")
+    field(EIVL, "81")
+    field(EIST, "HV response")
 }
 record(mbbi, "$(P)RspCmdAck")
 {
