Minor updates related to repo move
The repo move required some hardcoded paths to change within the
loopback validation Python script.  I also needed to add -lrt to
the loopback Makefile in order to link properly on RedHat; without
this the clock_gettime() functions failed to link.

--- a/tools/loopback/Makefile
+++ b/tools/loopback/Makefile
@@ -1,8 +1,8 @@
 OCCLIB=../../lib
 CPPFLAGS=-Wall -I$(OCCLIB) -std=c++0x
-LDFLAGS=-L$(OCCLIB) -locc -Wl,-rpath,$(OCCLIB) -pthread
+LDFLAGS=-L$(OCCLIB) -locc -lrt -Wl,-rpath,$(OCCLIB) -pthread
 SRCS=loopback.cpp
-BIN=occ_loopback
+BIN=loopback
 
 HDRS=
 OBJS=$(SRCS:.cpp=.o)
