Make install process verbose, add Makefile action for loading driver

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -19,12 +19,15 @@ clean:
 	@rm -f *.ko *.o *.mod.c modules.order Module.symvers
 
 install:
-	@install -d -m 0755 /etc/snsocb
-	@install -m 0755 snsocb0-sample /etc/snsocb
-	@install -m 0644 udev.rules /etc/udev/rules.d/95-snsocb.rules
-	@install -m 0755 rhel-load.modules /etc/sysconfig/modules/snsocb.modules
-	@install -m 0644 sns-ocb.ko $(TARGETDIR)/sns-ocb$(VER).ko
-	@ln -sf sns-ocb$(VER).ko $(TARGETDIR)/sns-ocb.ko
-	@depmod
+	install -d -m 0755 /etc/snsocb
+	install -m 0755 snsocb0-sample /etc/snsocb
+	install -m 0644 udev.rules /etc/udev/rules.d/95-snsocb.rules
+	install -m 0755 rhel-load.modules /etc/sysconfig/modules/snsocb.modules
+	install -m 0644 sns-ocb.ko $(TARGETDIR)/sns-ocb$(VER).ko
+	ln -sf sns-ocb$(VER).ko $(TARGETDIR)/sns-ocb.ko
+	depmod
+
+load:
+	insmod ./sns-ocb.ko
 
 endif
