Add driver&library version information
This includes:
* new API occ_version()
* driver and library must match
* python library API update
* kernel module version tag

Important, library will refuse to work with a driver of different version.

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -6,10 +6,9 @@ else
 # Invoke Kbuild
 #
 KDIR ?= /lib/modules/`uname -r`/build
-VER = $(shell pwd | awk -F'/' '{print $$(NF-1)}' | egrep "[0-9]+-[0-9]+" | sed -e 's/\(.*\)/-\1/')
-ifeq ($(VER),)
-VER = -current
-endif
+VER_MAJ := $(shell grep OCB_VER_MAJ sns-ocb.h | awk '{print $$3}')
+VER_MIN := $(shell grep OCB_VER_MIN sns-ocb.h | awk '{print $$3}')
+VER = $(join -,$(join $(VER_MAJ), $(join .,$(VER_MIN))))
 TARGETDIR = /lib/modules/`uname -r`/extra
 
 default:
