--- a/driver/Makefile
+++ b/driver/Makefile
@@ -20,7 +20,7 @@ clean:
 install:
 	install -d -m 0755 /etc/snsocb
 	install -m 0755 snsocb0-sample /etc/snsocb
-	install -m 0644 udev.rules /etc/udev/rules.d/95-snsocb.rules
+	install -m 0644 udev.rules /etc/udev/rules.d/95-snsocb.rules.sample
 	install -m 0755 rhel-load.modules /etc/sysconfig/modules/snsocb.modules
 	install -m 0644 sns-ocb.ko $(TARGETDIR)/sns-ocb$(VER).ko
 	ln -sf sns-ocb$(VER).ko $(TARGETDIR)/sns-ocb.ko
