Add error checking to OCC flashing tool
The tool would fail if it could not open the output file for verifying
contents of firmware. This can happen when run from prod/ read-only
directory. Added error reporting thru exceptions when opening the file
as well as when reading/writing.

Changed build process to hardcode absolute path to occlib rather than
relative - allows occ_flash program to be run from anywhere not just
local directory.

--- a/tools/flash/Makefile
+++ b/tools/flash/Makefile
@@ -1,4 +1,5 @@
-OCCLIB=../../lib
+ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
+OCCLIB=$(ROOT_DIR)/../../lib
 CPPFLAGS=-Wall -I$(OCCLIB) -std=c++0x
 LDFLAGS=-L$(OCCLIB) -locc -lrt -Wl,-rpath,$(OCCLIB) -lboost_iostreams
 SRCS=flashprog.cpp
